--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "config": "^3.3.6",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.8",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.4",
